tests/NormalTests/paczka1/fuzzy1/27478552.err
Error in line 4: Ew0ifAe S410 19,3
Error in line 19: NWRjhwP S444 53,1
Error in line 24: S444 S410 215,0
Error in line 33: llW1Ke S410 97,4
Error in line 31: Ew0ifAe S444 149,7
Error in line 25: 6fSu9siW S444 47,3
Error in line 34: llW1Ke A537 81,9
